--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.20.0",
     "morgan": "^1.10.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "util": "^0.12.5"
   }
 }
