--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "morgan": "^1.10.1",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
     "util": "^0.12.5"
   }
 }
